add form validation and nodemailer

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "javascript"
   ],
   "author": "Lex monteverde",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemailer": "^6.9.2"
+  }
 }
