compress media files add form validations

--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
     "javascript"
   ],
   "author": "Lex monteverde",
-  "license": "ISC",
-  "dependencies": {
-    "nodemailer": "^6.9.2"
-  }
+  "license": "ISC"
 }
