--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "mrpics",
   "version": "1.0.0",
-  "description": "Simple photography portfolio",
+  "description": "Is a photo portfolio made for Mannhy Monteverde.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "live-server"
+    "dev": "live-server ."
   },
-  "keywords": [
-    "photo",
-    "portfolio",
-    "web",
-    "node",
-    "html",
-    "css",
-    "javascript"
-  ],
-  "author": "Lex monteverde",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Melldy-Monteverde/mrpicturesPortfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Melldy-Monteverde/mrpicturesPortfolio/issues"
+  },
+  "homepage": "https://github.com/Melldy-Monteverde/mrpicturesPortfolio#readme"
 }
