--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "live-server ."
+    "dev": "live-server --browser=min --port=3000"
   },
   "repository": {
     "type": "git",
